--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "i18next": "^23.10.0",
     "react-i18next": "^14.0.5",
     "i18next-browser-languagedetector": "^7.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.0" 
   }
 }
