--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@heroui/react": "2.7.5",
     "@iconify/react": "latest",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "framer-motion": "^11.18.2",
+    "i18next": "^23.10.0",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "i18next": "^23.10.0",
-    "react-i18next": "^14.0.5",
-    "i18next-browser-languagedetector": "^7.2.0"
+    "react-i18next": "^14.0.5"
   },
   "devDependencies": {
-    "typescript": "^5.2.0" 
+    "typescript": "^5.2.0",
+    "vite": "^6.2.1"
   }
 }
