--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroui/react": "2.7.5",
+    "@heroui/react": "^2.7.5",
     "@iconify/react": "latest",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@vitejs/plugin-react": "^4.3.4",
@@ -22,6 +22,7 @@
     "react-i18next": "^14.0.5"
   },
   "devDependencies": {
+    "@types/react": "^19.0.10",
     "typescript": "^5.2.0",
     "vite": "^6.2.1"
   }
