--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,6 +12,6 @@
     "emitDeclarationOnly": true,
     "noEmit": false
   },
-  "include": ["vite.config.ts"],
+  "include": ["vite.config.ts", "src/**/*.ts", "src/**/*.d.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
