--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "react-i18next": "^14.0.5"
   },
   "devDependencies": {
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "^18.3.1",
     "typescript": "^5.2.0",
     "vite": "^6.2.1"
   }
