--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,17 +1,11 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "es6",
-    "module": "ESNext",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "declaration": true,
     "composite": true,
-    "emitDeclarationOnly": true,
-    "noEmit": false
+    "skipLibCheck": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true,
+    "strict": true
   },
-  "include": ["vite.config.ts", "src/**/*.ts", "src/**/*.d.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": ["vite.config.ts"]
 }
